# goat

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yaml
goat_core/: Cargo.toml
goat_core/src/: ast.rs  codegen_llvm.rs  lex.rs  lib.rs  parse.rs  semantic.rs  tokens.rs
spec/: LICENSE
src/: ast.rs  codegen_llvm.rs  lex.rs  main.rs  parse.rs  semantic.rs  tokens.rs  types.rs
tests/: LICENSE  stage1-visible.sh  test.sh
tests/fortytwo/: array_pass.bad.gt  array_true.bad.gt  assign_bool_int.bad.gt  assign_foat_int.bad.gt  bad_assoc.bad.gt  bad_lex.bad.gt  bad_lex_2.bad.gt  bad_shape_1.bad.gt  base_type.bad.gt  decl_array_m.bad.gt  decl_array_n1.bad.gt  decl_array_n2.bad.gt  distinct_formal_param.bad.gt  distinct_name.bad.gt  empty_body.bad.gt  empty_proc.bad.gt  empty_statement.bad.gt  eq.bad.gt  eq_int_float.bad.gt  float_int.gt  if_expr_check.bad.gt  int_float.gt  invalid_operator.bad.gt  invalid_proc_name.bad.gt  io.gt  logical.bad.gt  lots.bad.gt  main_arity.bad.gt  no_main.bad.gt  no_main_2.bad.gt  param_count_less.bad.gt  param_count_less_0.bad.gt  param_count_more.bad.gt  param_count_more_0.bad.gt  pass_ref_bool_int.bad.gt  pass_ref_float_int.bad.gt  pass_ref_int_bool.bad.gt  pass_ref_int_float.bad.gt  pass_val_bool_int.bad.gt  pass_val_float_int.bad.gt  (+20 more)
tests/new/: bool_compare.gt  call_const_as_array.bad.gt  call_const_as_matrix.bad.gt  call_undeclared.bad.gt  call_undeclared_array.bad.gt  call_undeclared_matrix.bad.gt  empty_statement1.bad.gt  empty_statement2.bad.gt  empty_statement3.bad.gt  hello.gt  pass.gt  (+12 more)
(+3 files in other folders)
