[package]
name = "goat"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/YC/goat"
description = "Compiler for Goat (COMP90045)"
keywords = ["comp90045", "goat", "compiler"]
categories = ["parser-implementations"]

[profile.release]
opt-level = 3
debug = false
panic = 'unwind'
codegen-units = 1
strip = true
overflow-checks = true

[lib]
name = "goat_core"
crate-type = ["lib"]
path = "goat_core/src/lib.rs"
